
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.friendularity</groupId>
		<artifactId>org.friendularity.modules.main</artifactId>
		<version>1.0.2-SNAPSHOT</version>
		<relativePath>../org.friendularity.modules.main/pom.xml</relativePath>
	</parent>

	<artifactId>org.friendularity.bundle.demo.gmteach</artifactId>
	<packaging>bundle</packaging>

	<name>${project.artifactId} - OSGi</name>

	<properties>
		<jflux.version>0.1.9-SNAPSHOT</jflux.version>
		<storychat.version>1.0.2-SNAPSHOT</storychat.version>
		<com.hrkind.robot.connections>
            <!-- We can add additional speech services for a robot by adding 
                the voices separated by colons after the ip address:
                robot01; 127.0.0.1; klauss:saul, ... 
                The extra speech services will have ids such as:
                robot01/klaussSpeechService
            -->
            <!--
        robot01; 192.168.2.127, 
        robot02; 192.168.2.127, 
        avatar01; 192.168.2.127
            -->
            <!-- Localhost avatar only -->
			robot01; 127.0.0.1,
			robot02; 127.0.0.1,
			avatar01; 127.0.0.1
			 <!-- ,
			 robot01; 192.168.0.103
			 -->
		</com.hrkind.robot.connections>

		<com.hrkind.test.behavior.master.source>
			sheetKey;0AlpQRNQ-L8QUdFh5YWswSzdYZFJMb1N6aEhJVWwtR3c,
			namespaceSheetNumber;4,
			directorySheetNumber;3,
			workBookPath;GluePuma_BehavMasterDemo.xlsx,
			workBookNamespaceSheet;Nspc.csv,
			workBookDirectorySheet;Dir.csv
		</com.hrkind.test.behavior.master.source>
	</properties>

	<dependencies>
      <!-- begin unneeded 
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>1.4.0</version>
			<scope>provided</scope> 
		</dependency>
		<dependency>
			<groupId>org.appdapter</groupId>
			<artifactId>ext.bundle.jena_all_2_10_1</artifactId>
			<type>jar</type>
			<version>${appdapter.version}</version>
		</dependency>
		 <dependency>
			 <artifactId>org.friendularity.spec.connection</artifactId>
			 <groupId>org.friendularity</groupId>
			 <version>${friendularity.version}</version>
		 </dependency>
		<dependency>
			<groupId>org.appdapter</groupId>
			<artifactId>org.appdapter.bundle.core</artifactId>
			<version>${appdapter.version}</version>
		</dependency>
      	
 		end unneeded -->

		<dependency>
			<groupId>org.storychat</groupId>
			<artifactId>org.storychat.bundle.glulx</artifactId>
			<version>${storychat.version}</version>
		</dependency>

		<!-- We want the same deps as CCRK, but MAYBE not the full PUMA boot peformed 
			by CCRK activator. -->
		<dependency>
			<!-- Note that o.f.project.root and o.f.modules.main must also have been 
				built and avail in local repo, in order for variables like "robokind.version" 
				to resolve when applied *transitively* (The built main+root is not required 
				to resolve the variables used directly in this pom; those are allowed to 
				come from the source-tree poms). -->
			<groupId>${project.groupId}</groupId>
			<artifactId>org.friendularity.bundle.netconfig</artifactId>
			<version>${project.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>org.cogchar.bundle.bind.lift</artifactId>
					<groupId>org.cogchar</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.cogchar</groupId>
			<artifactId>org.cogchar.bundle.app.puma</artifactId>
			<version>${cogchar.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>
						org.cogchar.bundle.bind.lift
					</artifactId>
					<groupId>org.cogchar</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.cogchar</groupId>
			<artifactId>org.cogchar.bundle.render.resources</artifactId>
			<version>${cogchar.version}</version>
			<scope>runtime</scope>
		</dependency>


		<!--  maybe play with webask later
		<dependency>
			<groupId>com.hrkind.tools</groupId>
			<artifactId>com.hrkind.tools.dictation.google</artifactId>
			<version>1.0.3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.hrkind.tools</groupId>
			<artifactId>com.hrkind.tools.bundle.web.ask</artifactId>
			<version>1.0.3-SNAPSHOT</version>
		</dependency> -->

		<dependency>
			<groupId>org.robokind</groupId>
			<artifactId>org.robokind.headless.messaging</artifactId>
			<version>${robokind.version}</version>
		</dependency>
		<!-- dependency>
			<groupId>org.robokind</groupId>
			<artifactId>org.robokind.client.basic</artifactId>
			<version>${robokind.version}</version>
		</dependency -->
		<dependency>
			<groupId>org.robokind</groupId>
			<artifactId>org.robokind.headless.speech</artifactId>
			<version>${robokind.version}</version>
		</dependency>
		<dependency>
			<groupId>org.robokind</groupId>
			<artifactId>org.robokind.api.vision</artifactId>
			<version>${robokind.version}</version>
		</dependency>
		<dependency>
			<groupId>org.robokind</groupId>
			<artifactId>org.robokind.impl.vision</artifactId>
			<version>${robokind.version}</version>
		</dependency>
		<!-- END OF ROBOKIND SORT OF EVERYTHING (What a large boiler plate) -->

		<!-- Services Panel -->
		<dependency>
			<groupId>org.rwshop</groupId>
			<artifactId>org.rwshop.swing.messaging</artifactId>
			<version>${rwshop.version}</version>
		</dependency>
		<dependency>
			<groupId>org.rwshop</groupId>
			<artifactId>org.rwshop.swing.common</artifactId>
			<version>${rwshop.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jflux</groupId>
			<artifactId>org.jflux.swing.messaging</artifactId>
			<version>${jflux.version}</version>
		</dependency>

		<!-- Our PAX-JETTY service -->
		<dependency>
			<groupId>org.appdapter</groupId>
			<artifactId>ext.bundle.jetty_osgi</artifactId>
			<version>${appdapter.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- GUI Deps -->
		<dependency>
			<groupId>org.appdapter</groupId>
			<artifactId>org.appdapter.bundle.gui</artifactId>
			<version>${appdapter.version}</version>
		</dependency>

		<!-- JOSEKI SPARQL Service -->
		<dependency>
			<groupId>org.cogchar</groupId>
			<artifactId>org.cogchar.bundle.bind.joseki</artifactId>
			<version>${cogchar.version}</version>
			<optional>true</optional>
		</dependency>

	    <!-- Our Lift-based webapp, which we expect PAX services above to find 
				and launch to HTTP for us 
		<dependency>
			<groupId>org.cogchar</groupId>
			<artifactId>org.cogchar.bundle.bind.lift</artifactId>
			<version>${cogchar.version}</version>
		</dependency> --> 

		<!-- BMD Deps -->
		<dependency>
			<groupId>org.cogchar</groupId>
			<artifactId>org.cogchar.lib.outer.behavior</artifactId>
			<version>${cogchar.version}</version>
		</dependency>
		
		<!-- JVISION -->
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>org.friendularity.bundle.jvision</artifactId>
			<version>${project.version}</version>
		</dependency>

        <!-- New VIZ LIB -->
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>org.friendularity.lib.viz</artifactId>
			<version>${project.version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.3.7</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-Activator>org.friendularity.bundle.demo.gmteach.GMTEACH_DemoActivator</Bundle-Activator>
						<!-- Cannot just export org.friendularity.*, because that will create copies of
								classes from other bundles that we depend on, e.g. JVision.
								
								On the other hand, a default (implicit) export instruction does not include classes from 
								libraries, like o.f.lib.viz, which we *do* want to include(/export).
								
								Don't know of a tidier way than explicitly exporting all the packages we do want.
								(Including "*" exports the whole universe of visible classes - exciting but horrible!)

								org.friendularity.respire
						-->
						<Export-Package>org.friendularity.gmteach.api.*,
							org.friendularity.gmteach.impl.visual,
							org.friendularity.gmteach.vworld,
							org.friendularity.api.struct,
							org.friendularity.struct,
							org.friendularity.bundle.demo.gmteach
						</Export-Package>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<version>2.15.2</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<!-- We're not actually using any scala tests right now
							<goal>testCompile</goal>
							-->
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>run-on-felix</id>
			<dependencies>
				<dependency>
					<groupId>org.apache.felix</groupId>
					<artifactId>org.apache.felix.main</artifactId>
					<version>4.2.1</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<version>1.7.5</version>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
					<version>1.7.5</version>
				</dependency>
                <!-- To include a shell:
                <dependency>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>org.apache.felix.gogo.shell</artifactId>
                    <version>0.6.1</version>
                </dependency>
                -->		  
		  <!-- org.apache.felix:org.apache.felix.gogo.shell:0.6.1 useless from Maven since stdin is swallowed -->
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.6</version>
						<configuration>
							<target>
								  <!-- HRK custom :  Note the log4j.debug flag -->
								  <property name="vm.args" value="-Dlog4j.debug -XX:MaxHeapSize=512M -XX:MaxPermSize=384M -XX:+TieredCompilation -XX:+UseConcMarkSweepGC" />
								<property name="vm.localargs" value="" />
								<pathconvert property="plugins.jars" pathsep="${path.separator}">
									<path refid="maven.runtime.classpath" />
									<map from="${project.build.directory}${file.separator}classes" to="" />
								</pathconvert>
								<makeurl property="urls" separator=" ">
									<path path="${plugins.jars}" />
									<path location="${project.build.directory}/${project.build.finalName}.jar" />
								</makeurl>
								<propertyfile file="${project.build.directory}/run.properties">
									<entry key="felix.auto.start" value="${urls}" />
									<entry key="felix.auto.deploy.action" value="uninstall,install,update,start" />
									<entry key="org.osgi.framework.storage" value="${project.build.directory}${file.separator}felix-cache" />
									<entry key="org.osgi.framework.bootdelegation" value="*" />
									<!-- Friendularity customizations : 
										1) Allow sun.misc package to be used by LWJGL.
										2) org.w3c.dom.* are wanteed by Jena, Xerces, (+?), and are missing from 
											default.properties in felix 4.2.1, tho	they are present in 3.0.7 -->
									<entry key="org.osgi.framework.system.packages.extra"
										value="sun.misc,
													  org.w3c.dom.css,
													  org.w3c.dom.html,
													  org.w3c.dom.stylesheets,
													  org.w3c.dom.traversal,
													  org.w3c.dom.ranges,
													  org.w3c.dom.views,
													  org.w3c.dom.xpath" />
								</propertyfile>
								  <makeurl property="run.properties.url" file="${project.build.directory}/run.properties" />
								  <java fork="true" jar="${maven.dependency.org.apache.felix.org.apache.felix.main.jar.path}">
									<sysproperty key="felix.config.properties" value="${run.properties.url}" />
									  <sysproperty key="com.hrkind.robot.connections" value="${com.hrkind.robot.connections}" />
									  <sysproperty key="com.hrkind.demo.behavior.master.source" value="${com.hrkind.demo.behavior.master.source}" />
									<sysproperty key="puma.boot.config.local" value="${puma.boot.config.local}" />
									<sysproperty key="behavior.master.type" value="${behavior.master.type}" />
									   <!-- 
											<sysproperty key="RKExtraVoices" value="klaus:saul" /> 
										           -agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=n  -->
									<jvmarg line="${vm.args} ${vm.localargs}" />
								</java>
							</target>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>
</project>
